add queues update